# ood

./: README.md
lab4/task1/tests/: DrawingTest.cpp
labs/lab1/task1/: CMakeLists.txt
labs/lab1/task1/lib/Duck/: Duck.h  ModelDuck.h  RedheadDuck.h  RubberDuck.h
labs/lab1/task1/lib/Duck/Dance/: DanceMinuet.h  IDanceBehavior.h
labs/lab1/task1/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
labs/lab1/task1/lib/Duck/Quack/: QuackBehavior.h  SqueakBehavior.h
labs/lab1/task1/test/: SimUDuckTests.cpp
labs/lab1/task2/: CMakeLists.txt  SimUDuck.cpp
labs/lab1/task2/lib/: DuckFunctions.h
labs/lab1/task2/lib/Duck/: DecoyDuck.h  Duck.h  MallardDuck.h  ModelDuck.h
labs/lab1/task2/lib/Duck/Dance/: DanceNoWay.h  DanceWaltz.h
labs/lab1/task2/lib/Duck/Fly/: FlyNoWay.h  FlyWithWings.h  IFlyBehavior.h
labs/lab1/task2/lib/Duck/Quack/: IQuackBehavior.h  MuteQuackBehavior.h
labs/lab1/task2/test/: MockFlyBehavior.h  MockQuackBehavior.h  SimUDuckTest.cpp
labs/lab1/task3/: CMakeLists.txt  SimUDuck.cpp  notes.md
labs/lab1/task3/lib/: DuckFunctions.h
labs/lab1/task4/: CMakeLists.txt  inputExample.txt  main.cpp  notes.md
labs/lab1/task4/gfx/: ICanvas.h  SFMLCanvas.h
labs/lab1/task4/picture/: Picture.cpp  Picture.h
labs/lab1/task4/service/: DrawingCommandHandler.cpp  DrawingCommandHandler.h  DrawingController.cpp  DrawingController.h  ShapeFactory.cpp  ShapeFactory.h
labs/lab1/task4/shapes/: Point.h  Shape.h
labs/lab1/task4/shapes/strategy/: CircleStrategy.h  IShapeStrategy.h  LineStrategy.h  RectangleStrategy.h  TextStrategy.h  TriangleStrategy.h
labs/lab1/task4/test/: ShapeTest.cpp
labs/lab2/task1/: CMakeLists.txt  main.cpp
labs/lab2/task1/Observable/: CObservable.h  IObservable.h
labs/lab2/task1/Observer/: CCounter.h  CStatsDisplay.h
labs/lab2/task3/: CMakeLists.txt  SWeatherInfo.h
labs/lab2/task3/Observable/: CObservable.h  CWeatherData.h
labs/lab2/task3/Observer/: CDisplay.h
labs/lab2/task3/test/: ObserverTest.cpp
labs/lab2/task3_1/: CMakeLists.txt
labs/lab2/task3_1/Observable/: CObservable.h
labs/lab2/task3_1/Observer/: CCounter.h  CStatsDisplay.h
labs/lab2/task3_1/test/: ObserverTest.cpp
labs/lab2/task4/: CMakeLists.txt  IObserver.h  main.cpp
labs/lab2/task4/Observable/: CObservable.h  IObservable.h
labs/lab2/task4/Observer/: CCounter.h  CDisplay.h  CStatsDisplay.h  IObserver.h
labs/lab2/task4/test/: ObserverTest.cpp
labs/lab2/task5/: CMakeLists.txt  main.cpp
labs/lab2/task5/Observable/: CObservable.h  CWeatherData.h
labs/lab2/task5/Observer/: CCounter.h  CDisplay.h  CStatsDisplay.h  CWindCounter.h
labs/lab2/task6/: CMakeLists.txt  main.cpp
labs/lab2/task6/Observable/: CObservable.h
labs/lab2/task6/Observer/: CCounter.h  CDisplay.h  CStatsDisplay.h  CWindCounter.h
labs/lab2/task7/: CMakeLists.txt  main.cpp
labs/lab2/task7/Animals/: CAnimalData.h  CCatObserver.h  CDogObserver.h  CMouseObserver.h  EAnimalEventType.h  SAnimalInfo.h
labs/lab2/task7/Observer/: CObservable.h  IObserver.h
labs/lab2/task7/WeatherStation/: EWeatherEventType.h  SWeatherInfo.h
labs/lab2/task7/WeatherStation/Observable/: CWeatherData.h  IObservable.h
labs/lab2/task7/WeatherStation/Observer/: CFishermanDisplay.h  IObserver.h
labs/lab3/task1/: CMakeLists.txt  main.cpp
labs/lab3/task1/Beverage/: CBerryTea.h  CBeverage.h  CBlackTea.h  CCappuccino.h  CCoffee.h  CGreenTea.h  CLatte.h  CMilkshake.h  COolongTea.h  CTea.h  IBeverage.h
labs/lab3/task1/Decorator/: CChocolate.h  CChocolateCrumbs.h  CCinnamon.h  CCoconutFlakes.h  CCondimentDecorator.h  CCream.h  CIceCubes.h  CLemon.h  CLiquor.h  CSyrup.h
labs/lab3/task3/: CMakeLists.txt  main.cpp  tests.txt
labs/lab3/task3/InputStream/: DecompressInputStream.h  DecryptInputStream.h  FileInputStream.h  IInputDataStream.h  InputStreamDecorator.h  MemoryInputStream.h
labs/lab3/task3/OutputStream/: CompressOutputStream.h  EncryptOutputStream.h  FileOutputStream.h  IOutputDataStream.h  MemoryOutputStream.h  OutputStreamDecorator.h
labs/lab3/task3/tests/: FileHandlerMock.h  StreamTest.cpp
labs/lab4/task/: CMakeLists.txt  Client.h  main.cpp  tests.txt
labs/lab4/task/canvas/: ICanvas.h  SFMLCanvas.h
labs/lab4/task/designer/: Designer.h  IDesigner.h  PictureDraft.h
labs/lab4/task/painter/: IPainter.h  Painter.h
labs/lab4/task/shapes/: Color.h  IShapeFactory.h  Shape.h  ShapeFactory.h
labs/lab4/task/tests/: DrawingTest.cpp
labs/lab5/task1/document/: CConstDocumentItem.h  CDocumentItem.h  FileHandler.h  History.h  IDocument.h
labs/lab5/task1/tests/: DeleteItemCommandTests.cpp  EditorCommandTests.cpp  EditorTests.cpp  HistoryTests.cpp  InsertImageTests.cpp  InsertParagraphTests.cpp  ReplaceTextTests.cpp  ResizeImageTests.cpp  SetTitleCommandTests.cpp
lectures/lecture_1(strategy)/: 1. strategy.md
(+26 files in other folders)
